test/Fail/MissingDefinitionDataOrRec.err
MissingDefinitionDataOrRec.agda:2.1-4.27: error: [MissingDefinitions]
The following names are declared but not accompanied by a
definition: T, U, V
